# webrs_chat

./: .gitignore  Cargo.toml  README.md  config.toml  shell.nix
content/: index.html  main.css  main.js  mypage.html
content/chat/: auth.js  chat.css  chat.html  chat.js  index.html  login.css  login.html  login.js  main.js  style.css
src/: lib.rs  main.rs
src/api/: api.rs  mod.rs
src/api/endpoints/: chat.rs  file_upload.rs  mod.rs  secure.rs  test.rs
src/api/endpoints/chat/: auth.rs  mod.rs
src/endpoints/chat/: auth.rs  mod.rs
src/handlers/: get.rs  mod.rs  options.rs  post.rs
webrs/: Cargo.toml
webrs/src/: lib.rs
webrs/src/api/: api.rs  mod.rs
webrs/src/handlers/: get.rs  mod.rs  options.rs
