[workspace]
members = [
  "webrs"
]

[package]
name = "chat_test"
version = "0.1.0"
edition = "2021"

[dependencies]
webrs = { path = "webrs" }
log = "0.4"
serde_json = "1.0"
rand = "0.8.5"
sha2 = "0.10.8"
tokio = { version = "1", features = ["full"] }
toml = "0.8.19"
serde = { version = "1.0", features = ["derive"] }
pretty_env_logger = "0.5.0"


